# Django_REST_Framework

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
lms/: models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_initial.py  0002_lesson_url_video.py  0003_alter_lesson_course.py  0003_subscription.py
users/: models.py  permissions.py  serializers.py  services.py  urls.py  views.py
users/fixtures/: users_fixture.json
users/migrations/: 0001_initial.py  0002_payment.py  0002_payment_link_payment_session_id.py
